added a redirect countdown timer on click to add daisy

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,15 +14,15 @@
 		<meta property="og:title" content="I dont want to use this one" /> 
 
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-		<link rel="stylesheet" href="css/donateadaisy.css">
+		<link rel="stylesheet" href="css/donateadaisy.css" />
 		<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 		<!-- <script type="text/javascript" async src="//platform.twitter.com/widgets.js"></script> -->
 	</head>
+
 	<body>
 		<!--[if lt IE 7]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
-
 		<div id="content">
 
 			<div id="centerpoint"></div>
@@ -74,10 +74,7 @@
 						<li class="add">
 							<img src="img/daisy-head-add-icon.png" class="daisy-add-icon">
 							<img src="img/daisy-head-add.png" class="daisy-add daisy">
-							<a href="http://v3-sandbox.justgiving.com/donateadaisy/4w350m3/donate/
-?amount=20
-&currency=GBP
-&exitUrl=http%3a%2f%2fwww.donateadaisy.dev%2fpath?donationId=JUSTGIVING-DONATION-ID" class="pill yellow">add your daisy</a>
+							<a href="" class="pill yellow" data-content='3'>add your daisy</a>
 						</li>
 						{{#each daisies}}
 						<li id='daisy-{{id}}' class="daisyContainer">
