--- a/public_html/index.html
+++ b/public_html/index.html
@@ -61,6 +61,11 @@
 				<div id="raisedAmount">£0.00</div>
 			</div>
 
+			<div id="hint">
+				<div id="hint-drag">Drag the Daisy Chain to move along it.</div>
+				<div id="hint-click">Click a daisy to open its message.</div>
+			</div>
+
 
 		</div>
 
