--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,8 +10,11 @@
 		<meta name="description" content="Add a Daisy to the Cancer Connections Daisy Chain. Make a donation and help friends, family and loved ones suffering from cancer.">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Facebook meta stuff -->
-		<meta property="og:type" content="donateadaisy:daisy" /> 
-		<meta property="og:title" content="I dont want to use this one" /> 
+		<meta property="og:type" content="donateadaisy:daisy" />
+		<meta property="og:title" content="Donate a Daisy for Cancer Connections" />
+		<meta property="og:url" content="http://donateadaisy.org/" />
+		<meta property="og:description" content="Donate a Daisy - Add a daisy to the Cancer Connections daisy chain and leave a message in memory of a loved one." />
+		<meta property="og:image" content="http://donateadaisy.org/img/fb-donate-a-daisy.png" />
 
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 		<link rel="stylesheet" href="css/donateadaisy.css" />
